--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Breaking bad</title>
 </head>
 <body>
+
+    <div class="wrapper">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+
     <header id="navbar">
         <nav class="navbar-container container">
           <a href="/" class="home-link">
@@ -32,8 +45,21 @@
         </nav>
     </header>
 
+    <main class="main-container">
+        <div id="name"></div>
+    </main>
 
-    <div id="name"></div>
+    <footer class="footer-container">
+        <div class="footer-labels">
+            <p class="label-item">Characters: 62</p>
+            <p class="label-item">Episodes: 102</p>
+            <p class="label-item">Quotes: 70</p>
+            <p class="label-item">Death Count: 271</p>
+        </div>
+    </footer>
+
+
+    
     <script type="module" src="./js/index.js"></script>
     <script src="./js/navBar.js"></script>
 </body>
