--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
         </nav>
     </header>
 
-    <main class="main-container">
+    <main class="main-container container">
         <div id="name"></div>
+
+        <div id="image" class="image-container">
+
+        </div>
     </main>
 
     <footer class="footer-container">
