Add data to footer

--- a/index.html
+++ b/index.html
@@ -54,11 +54,7 @@
     </main>
 
     <footer class="footer-container">
-        <div class="footer-labels">
-            <p class="label-item">Characters: 62</p>
-            <p class="label-item">Episodes: 102</p>
-            <p class="label-item">Quotes: 70</p>
-            <p class="label-item">Death Count: 271</p>
+        <div id="label-container" class="footer-labels">
         </div>
     </footer>
 
