Changing navbar values

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
           </button>
           <div class="navbar-menu">
             <ul class="navbar-links">
-              <li class="navbar-item"><a class="navbar-link" href="/">About</a></li>
-              <li class="navbar-item"><a class="navbar-link" href="#">Blog</a></li>
-              <li class="navbar-item"><a class="navbar-link" href="#">Careers</a></li>
-              <li class="navbar-item"><a class="navbar-link" href="#">Contact</a></li>
+              <li class="navbar-item"><a class="navbar-link" href="/">Home</a></li>
+              <li class="navbar-item"><a class="navbar-link" href="#">Characters</a></li>
+              <li class="navbar-item"><a class="navbar-link" href="#">Episodes</a></li>
+              <li class="navbar-item"><a class="navbar-link" href="#">Quotes</a></li>
+              <li class="navbar-item"><a class="navbar-link" href="#">Deaths</a></li>
             </ul>
           </div>
         </nav>
