Fields layout, search input added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         <div></div>
     </div>
 
-
     <header id="navbar">
         <nav class="navbar-container container">
           <a href="/" class="home-link">
@@ -47,19 +46,39 @@
     </header>
 
     <main class="main-container container">
-        <div id="name"></div>
-
+        <div class="search">
+          <input type="text">
+          <button>Search</button>
+        </div>
+        <div id="name" class="name"></div>
         <div id="image" class="image-container">
 
         </div>
+
+        <div class="fields">
+          <div class="cell">
+            <span>Nickname</span>
+          </div>
+          <div class="cell">
+            <span>Status</span>
+          </div>
+          <div class="cell">
+            <span>Ocupation</span>
+          </div>
+          <div class="cell">
+            <span>Seasons</span>
+          </div>
+          <div class="cell">
+            <span>Portrayed</span>
+          </div>
+        </div>
+        
     </main>
 
     <footer class="footer-container">
         <div id="label-container" class="footer-labels">
         </div>
     </footer>
-
-
     
     <script type="module" src="./js/index.js"></script>
     <script src="./js/navBar.js"></script>
